@@ -1,3 +1,4 @@
+* Create a draft guarantee when selling a product with guarantee type
 * Add workflow on guarantee
 
 Version 3.4.0 - 2014-11-10
